@@ -1,8 +1,13 @@
 package cn.nukkit.block;
 
 import cn.nukkit.Player;
-import cn.nukkit.Server;
+import cn.nukkit.api.*;
+import cn.nukkit.blockproperty.BlockProperties;
+import cn.nukkit.blockproperty.CommonBlockProperties;
+import cn.nukkit.blockstate.*;
+import cn.nukkit.blockstate.exception.InvalidBlockStateException;
 import cn.nukkit.entity.Entity;
+import cn.nukkit.event.player.PlayerInteractEvent;
 import cn.nukkit.item.Item;
 import cn.nukkit.item.ItemBlock;
 import cn.nukkit.item.ItemTool;
@@ -12,48 +17,150 @@ import cn.nukkit.level.MovingObjectPosition;
 import cn.nukkit.level.Position;
 import cn.nukkit.math.AxisAlignedBB;
 import cn.nukkit.math.BlockFace;
+import cn.nukkit.math.NukkitMath;
 import cn.nukkit.math.Vector3;
 import cn.nukkit.metadata.MetadataValue;
 import cn.nukkit.metadata.Metadatable;
 import cn.nukkit.plugin.Plugin;
 import cn.nukkit.potion.Effect;
 import cn.nukkit.utils.BlockColor;
+import cn.nukkit.utils.InvalidBlockDamageException;
+import com.google.common.base.Preconditions;
+import lombok.extern.log4j.Log4j2;
 
+import javax.annotation.Nonnegative;
+import javax.annotation.Nonnull;
+import javax.annotation.Nullable;
+import java.io.Serializable;
 import java.lang.reflect.Constructor;
+import java.lang.reflect.InvocationTargetException;
+import java.math.BigInteger;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.function.Consumer;
+import java.util.function.Predicate;
+
+import static cn.nukkit.utils.Utils.dynamic;
 
 /**
- * author: MagicDroidX
- * Nukkit Project
+ * @author MagicDroidX (Nukkit Project)
  */
-public abstract class Block extends Position implements Metadatable, Cloneable, AxisAlignedBB, BlockID {
-    public static Class[] list = null;
+@PowerNukkitDifference(info = "Implements IMutableBlockState only on PowerNukkit", since = "1.4.0.0-PN")
+@SuppressWarnings({"java:S2160", "java:S3400"})
+@Log4j2
+public abstract class Block extends Position implements Metadatable, Cloneable, AxisAlignedBB, BlockID, IMutableBlockState {
+    
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    public static final Block[] EMPTY_ARRAY = new Block[0];
+
+    //<editor-fold desc="static fields" defaultstate="collapsed">
+    @Deprecated
+    @DeprecationDetails(since = "1.4.0.0-PN", reason = "It is being replaced by an other solution that don't require a fixed size")
+    @PowerNukkitOnly
+    public static final int MAX_BLOCK_ID = dynamic(600);
+    
+    @Deprecated
+    @DeprecationDetails(since = "1.4.0.0-PN", reason = "It's not a constant value, it may be changed on major updates and" +
+            " plugins will have to be recompiled in order to update this value in the binary files, " +
+            "it's also being replaced by the BlockState system")
+    @PowerNukkitOnly
+    public static final int DATA_BITS = dynamic(4);
+
+    @Deprecated
+    @DeprecationDetails(since = "1.4.0.0-PN", reason = "It's not a constant value, it may be changed on major updates and" +
+            " plugins will have to be recompiled in order to update this value in the binary files, " +
+            "it's also being replaced by the BlockState system")
+    @PowerNukkitOnly
+    public static final int DATA_SIZE = dynamic(1 << DATA_BITS);
+
+    @Deprecated
+    @DeprecationDetails(since = "1.4.0.0-PN", reason = "It's not a constant value, it may be changed on major updates and" +
+            " plugins will have to be recompiled in order to update this value in the binary files, " +
+            "it's also being replaced by the BlockState system")
+    @PowerNukkitOnly
+    public static final int DATA_MASK = dynamic(DATA_SIZE - 1);
+
+    @Deprecated
+    @DeprecationDetails(since = "1.4.0.0-PN", reason = "Not encapsulated, easy to break", 
+            replaceWith = "Block.get(int).getClass(), to register new blocks use registerBlockImplementation()")
+    @SuppressWarnings({"java:S1444", "java:S2386"})
+    public static Class<? extends Block>[] list = null;
+    
+    @DeprecationDetails(reason = "The meta is limited to 32 bits", since = "1.3.0.0-PN", 
+            replaceWith = "To register/override implementations use registerBlockImplementation(), " +
+                    "to get the block with a given state use BlockState.of and than BlockState.getBlock()")
+    @Deprecated
+    @SuppressWarnings({"java:S1444", "java:S2386", "java:S1123", "java:S1133", "DeprecatedIsStillUsed"})
     public static Block[] fullList = null;
+    
+    @Deprecated
+    @DeprecationDetails(reason = "Not encapsulated, easy to break", since = "1.4.0.0-PN",
+            replaceWith = "Block.getLightLevel()")
+    @SuppressWarnings({"java:S1444", "java:S2386"})
     public static int[] light = null;
+
+    @Deprecated
+    @DeprecationDetails(reason = "Not encapsulated, easy to break", since = "1.4.0.0-PN", 
+            replaceWith = "Block.getLightFilter()")
+    @SuppressWarnings({"java:S1444", "java:S2386"})
     public static int[] lightFilter = null;
+
+    @Deprecated
+    @DeprecationDetails(reason = "Not encapsulated, easy to break", since = "1.4.0.0-PN",
+            replaceWith = "Block.isSolid()")
+    @SuppressWarnings({"java:S1444", "java:S2386"})
     public static boolean[] solid = null;
+
+    @Deprecated
+    @DeprecationDetails(reason = "Not encapsulated, easy to break", since = "1.4.0.0-PN",
+            replaceWith = "Block.getHardness()")
+    @SuppressWarnings({"java:S1444", "java:S2386"})
     public static double[] hardness = null;
+
+    @Deprecated
+    @DeprecationDetails(reason = "Not encapsulated, easy to break", since = "1.4.0.0-PN",
+            replaceWith = "Block.isTransparent()")
+    @SuppressWarnings({"java:S1444", "java:S2386"})
     public static boolean[] transparent = null;
+
+    @Deprecated
+    @DeprecationDetails(reason = "Not encapsulated, easy to break", since = "1.4.0.0-PN",
+            replaceWith = "Block.diffusesSkyLight()")
+    @SuppressWarnings({"java:S1444", "java:S2386"})
+    public static boolean[] diffusesSkyLight = null;
+    
     /**
      * if a block has can have variants
      */
+    @Deprecated
+    @DeprecationDetails(since = "1.4.0.0-PN", reason = "It's being replaced by the BlockState system")
+    @SuppressWarnings({"java:S1444", "java:S2386"})
     public static boolean[] hasMeta = null;
+    
+    private static boolean initializing;
+    
+    @PowerNukkitOnly
+    @Since("1.3.0.0-PN")
+    public static boolean isInitializing() {
+        return initializing;
+    }
+    //</editor-fold>
 
-    protected Block() {}
-
+    //<editor-fold desc="initialization" defaultstate="collapsed">
     @SuppressWarnings("unchecked")
     public static void init() {
         if (list == null) {
-            list = new Class[256];
-            fullList = new Block[4096];
-            light = new int[256];
-            lightFilter = new int[256];
-            solid = new boolean[256];
-            hardness = new double[256];
-            transparent = new boolean[256];
-            hasMeta = new boolean[256];
+            list = new Class[MAX_BLOCK_ID];
+            fullList = new Block[MAX_BLOCK_ID * (1 << DATA_BITS)];
+            light = new int[MAX_BLOCK_ID];
+            lightFilter = new int[MAX_BLOCK_ID];
+            solid = new boolean[MAX_BLOCK_ID];
+            hardness = new double[MAX_BLOCK_ID];
+            transparent = new boolean[MAX_BLOCK_ID];
+            diffusesSkyLight = new boolean[MAX_BLOCK_ID];
+            hasMeta = new boolean[MAX_BLOCK_ID];
 
             list[AIR] = BlockAir.class; //0
             list[STONE] = BlockStone.class; //1
@@ -179,7 +286,7 @@ public abstract class Block extends Position implements Metadatable, Cloneable, 
             list[DRAGON_EGG] = BlockDragonEgg.class; //122
             list[REDSTONE_LAMP] = BlockRedstoneLamp.class; //123
             list[LIT_REDSTONE_LAMP] = BlockRedstoneLampLit.class; //124
-            //TODO: list[DROPPER] = BlockDropper.class; //125
+            list[DROPPER] = BlockDropper.class; //125
             list[ACTIVATOR_RAIL] = BlockRailActivator.class; //126
             list[COCOA] = BlockCocoa.class; //127
             list[SANDSTONE_STAIRS] = BlockStairsSandstone.class; //128
@@ -258,15 +365,17 @@ public abstract class Block extends Position implements Metadatable, Cloneable, 
             
             list[UNDYED_SHULKER_BOX] = BlockUndyedShulkerBox.class; //205
             list[END_BRICKS] = BlockBricksEndStone.class; //206
-
+            list[ICE_FROSTED] = BlockIceFrosted.class; //207
             list[END_ROD] = BlockEndRod.class; //208
             list[END_GATEWAY] = BlockEndGateway.class; //209
-
+            list[ALLOW] = BlockAllow.class; //210
+            list[DENY] = BlockDeny.class; //211
+            list[BORDER_BLOCK] = BlockBorder.class; //212
             list[MAGMA] = BlockMagma.class; //213
             list[BLOCK_NETHER_WART_BLOCK] = BlockNetherWartBlock.class; //214
             list[RED_NETHER_BRICK] = BlockBricksRedNether.class; //215
             list[BONE_BLOCK] = BlockBone.class; //216
-
+            list[STRUCTURE_VOID] = BlockStructureVoid.class; //217
             list[SHULKER_BOX] = BlockShulkerBox.class; //218
             list[PURPLE_GLAZED_TERRACOTTA] = BlockTerracottaGlazedPurple.class; //219
             list[WHITE_GLAZED_TERRACOTTA] = BlockTerracottaGlazedWhite.class; //220
@@ -294,103 +403,536 @@ public abstract class Block extends Position implements Metadatable, Cloneable, 
             list[BEETROOT_BLOCK] = BlockBeetroot.class; //244
             list[STONECUTTER] = BlockStonecutter.class; //245
             list[GLOWING_OBSIDIAN] = BlockObsidianGlowing.class; //246
-            //list[NETHER_REACTOR] = BlockNetherReactor.class; //247 Should not be removed
+            list[NETHER_REACTOR] = BlockNetherReactor.class; //247 Should not be removed
 
-            //TODO: list[PISTON_EXTENSION] = BlockPistonExtension.class; //250
-
+            list[MOVING_BLOCK] = BlockMoving.class; //250
             list[OBSERVER] = BlockObserver.class; //251
+            list[STRUCTURE_BLOCK] = BlockStructure.class; //252
+            
+            list[PRISMARINE_STAIRS] = BlockStairsPrismarine.class; //257
+            list[DARK_PRISMARINE_STAIRS] = BlockStairsDarkPrismarine.class; //258
+            list[PRISMARINE_BRICKS_STAIRS] = BlockStairsPrismarineBrick.class; //259
+            list[STRIPPED_SPRUCE_LOG] = BlockWoodStrippedSpruce.class; //260
+            list[STRIPPED_BIRCH_LOG] = BlockWoodStrippedBirch.class; //261
+            list[STRIPPED_JUNGLE_LOG] = BlockWoodStrippedJungle.class; //262
+            list[STRIPPED_ACACIA_LOG] = BlockWoodStrippedAcacia.class; //263
+            list[STRIPPED_DARK_OAK_LOG] = BlockWoodStrippedDarkOak.class; //264
+            list[STRIPPED_OAK_LOG] = BlockWoodStrippedOak.class; //265
+            list[BLUE_ICE] = BlockBlueIce.class; //266
 
-            for (int id = 0; id < 256; id++) {
-                Class c = list[id];
+            list[SEAGRASS] = BlockSeagrass.class; //385
+            list[CORAL] = BlockCoral.class; //386
+            list[CORAL_BLOCK] = BlockCoralBlock.class; //387
+            list[CORAL_FAN] = BlockCoralFan.class; //388
+            list[CORAL_FAN_DEAD] = BlockCoralFanDead.class; //389
+            list[CORAL_FAN_HANG] = BlockCoralFanHang.class; //390
+            list[CORAL_FAN_HANG2] = BlockCoralFanHang2.class; //391
+            list[CORAL_FAN_HANG3] = BlockCoralFanHang3.class; //392
+            list[BLOCK_KELP] = BlockKelp.class; //393
+            list[DRIED_KELP_BLOCK] = BlockDriedKelpBlock.class; //394
+            list[ACACIA_BUTTON] = BlockButtonAcacia.class; //395
+            list[BIRCH_BUTTON] = BlockButtonBirch.class; //396
+            list[DARK_OAK_BUTTON] = BlockButtonDarkOak.class; //397
+            list[JUNGLE_BUTTON] = BlockButtonJungle.class; //398
+            list[SPRUCE_BUTTON] = BlockButtonSpruce.class; //399
+            list[ACACIA_TRAPDOOR] = BlockTrapdoorAcacia.class; //400
+            list[BIRCH_TRAPDOOR] = BlockTrapdoorBirch.class; //401
+            list[DARK_OAK_TRAPDOOR] = BlockTrapdoorDarkOak.class; //402
+            list[JUNGLE_TRAPDOOR] = BlockTrapdoorJungle.class; //403
+            list[SPRUCE_TRAPDOOR] = BlockTrapdoorSpruce.class; //404
+            list[ACACIA_PRESSURE_PLATE] = BlockPressurePlateAcacia.class; //405
+            list[BIRCH_PRESSURE_PLATE] = BlockPressurePlateBirch.class; //406
+            list[DARK_OAK_PRESSURE_PLATE] = BlockPressurePlateDarkOak.class; //407
+            list[JUNGLE_PRESSURE_PLATE] = BlockPressurePlateJungle.class; //408
+            list[SPRUCE_PRESSURE_PLATE] = BlockPressurePlateSpruce.class; //409
+            list[CARVED_PUMPKIN] = BlockCarvedPumpkin.class; //410
+            list[SEA_PICKLE] = BlockSeaPickle.class; //411
+            list[CONDUIT] = BlockConduit.class; //412
+
+            list[TURTLE_EGG] = BlockTurtleEgg.class; //414
+            list[BUBBLE_COLUMN] = BlockBubbleColumn.class; //415
+            list[BARRIER] = BlockBarrier.class; //416
+            list[STONE_SLAB3] = BlockSlabStone3.class ; //417
+            list[BAMBOO] = BlockBamboo.class; //418
+            list[BAMBOO_SAPLING] = BlockBambooSapling.class; //419
+            list[SCAFFOLDING] = BlockScaffolding.class; //420
+            list[STONE_SLAB4] = BlockSlabStone4.class ; //421
+            list[DOUBLE_STONE_SLAB3] = BlockDoubleSlabStone3.class; //422
+            list[DOUBLE_STONE_SLAB4] = BlockDoubleSlabStone4.class; //422
+
+            list[GRANITE_STAIRS] = BlockStairsGranite.class; //424
+            list[DIORITE_STAIRS] = BlockStairsDiorite.class; //425
+            list[ANDESITE_STAIRS] = BlockStairsAndesite.class; //426
+            list[POLISHED_GRANITE_STAIRS] = BlockStairsGranitePolished.class; //427
+            list[POLISHED_DIORITE_STAIRS] = BlockStairsDioritePolished.class; //428
+            list[POLISHED_ANDESITE_STAIRS] = BlockStairsAndesitePolished.class; //429
+            list[MOSSY_STONE_BRICK_STAIRS] = BlockStairsMossyStoneBrick.class; //430
+            list[SMOOTH_RED_SANDSTONE_STAIRS] = BlockStairsSmoothRedSandstone.class; //431
+            list[SMOOTH_SANDSTONE_STAIRS] = BlockStairsSmoothSandstone.class; //432
+            list[END_BRICK_STAIRS] = BlockStairsEndBrick.class; //433
+            list[MOSSY_COBBLESTONE_STAIRS] = BlockStairsMossyCobblestone.class; //434
+            list[NORMAL_STONE_STAIRS] = BlockStairsStone.class; //435
+
+            list[SMOOTH_STONE] = BlockSmoothStone.class; //438
+            list[RED_NETHER_BRICK_STAIRS] = BlockStairsRedNetherBrick.class; //439
+            list[SMOOTH_QUARTZ_STAIRS] = BlockStairsSmoothQuartz.class; //440
+
+            list[SPRUCE_STANDING_SIGN] = BlockSpruceSignPost.class; //436
+            list[SPRUCE_WALL_SIGN] = BlockSpruceWallSign.class; //437
+
+            list[BIRCH_STANDING_SIGN] = BlockBirchSignPost.class; //441
+            list[BIRCH_WALL_SIGN] = BlockBirchWallSign.class; //442
+            list[JUNGLE_STANDING_SIGN] = BlockJungleSignPost.class; //443
+            list[JUNGLE_WALL_SIGN] = BlockJungleWallSign.class; //444
+            list[ACACIA_STANDING_SIGN] = BlockAcaciaSignPost.class; //445
+            list[ACACIA_WALL_SIGN] = BlockAcaciaWallSign.class; //446
+            list[DARKOAK_STANDING_SIGN] = BlockDarkOakSignPost.class; //447
+            list[DARKOAK_WALL_SIGN] = BlockDarkOakWallSign.class; //448
+
+            list[LECTERN] = BlockLectern.class; //449
+            list[GRINDSTONE] = BlockGrindstone.class; //450
+            list[BLAST_FURNACE] = BlockBlastFurnace.class; //451
+            list[STONECUTTER_BLOCK] = BlockStonecutterBlock.class; //452
+            list[SMOKER] = BlockSmoker.class; //453
+            list[LIT_SMOKER] = BlockSmokerBurning.class; //454
+
+            list[CARTOGRAPHY_TABLE] = BlockCartographyTable.class; //455
+            list[FLETCHING_TABLE] = BlockFletchingTable.class; //456
+            list[SMITHING_TABLE] = BlockSmithingTable.class; //457
+            list[BARREL] = BlockBarrel.class; //458
+            list[LOOM] = BlockLoom.class; //459
+
+            list[BELL] = BlockBell.class; //462
+            list[SWEET_BERRY_BUSH] = BlockSweetBerryBush.class; //462
+            list[LANTERN] = BlockLantern.class; //463
+
+            list[CAMPFIRE_BLOCK] = BlockCampfire.class; //464
+            list[LAVA_CAULDRON] = BlockCauldronLava.class; //465
+            list[JIGSAW] = BlockJigsaw.class; //466
+            list[WOOD_BARK] = BlockWoodBark.class; //467
+            list[COMPOSTER] = BlockComposter.class; //468
+            list[LIT_BLAST_FURNACE] = BlockBlastFurnaceBurning.class; //469
+            list[LIGHT_BLOCK] = BlockLight.class; //470
+            list[WITHER_ROSE] = BlockWitherRose.class; //471
+            
+            list[STICKYPISTONARMCOLLISION] = BlockPistonHeadSticky.class; //472
+            list[BEE_NEST] = BlockBeeNest.class; //473
+            list[BEEHIVE] = BlockBeehive.class; //474
+            list[HONEY_BLOCK] = BlockHoney.class; //475
+            list[HONEYCOMB_BLOCK] = BlockHoneycombBlock.class; //476
+            list[LODESTONE] = BlockLodestone.class; //477
+            list[CRIMSON_ROOTS] = BlockRootsCrimson.class; //478
+            list[WARPED_ROOTS] = BlockRootsWarped.class; //479
+            list[CRIMSON_STEM] = BlockStemCrimson.class; //480
+            list[WARPED_STEM] = BlockStemWarped.class; //481
+            list[WARPED_WART_BLOCK] = BlockWarpedWartBlock.class; //482 
+            list[CRIMSON_FUNGUS] = BlockFungusCrimson.class; //483
+            list[WARPED_FUNGUS] = BlockFungusWarped.class; //484
+            list[SHROOMLIGHT] = BlockShroomlight.class; //485
+            list[WEEPING_VINES] = BlockVinesWeeping.class; //486
+            list[CRIMSON_NYLIUM] = BlockNyliumCrimson.class; //487
+            list[WARPED_NYLIUM] = BlockNyliumWarped.class; //488
+            list[BASALT] = BlockBasalt.class; //489
+            list[POLISHED_BASALT] = BlockPolishedBasalt.class; //490
+            list[SOUL_SOIL] = BlockSoulSoil.class; //491
+            list[SOUL_FIRE] = BlockFireSoul.class; //492
+            list[NETHER_SPROUTS_BLOCK] = BlockNetherSprout.class; //493 
+            list[TARGET] = BlockTarget.class; //494
+            list[STRIPPED_CRIMSON_STEM] = BlockStemStrippedCrimson.class; //495
+            list[STRIPPED_WARPED_STEM] = BlockStemStrippedWarped.class; //496
+            list[CRIMSON_PLANKS] = BlockPlanksCrimson.class; //497
+            list[WARPED_PLANKS] = BlockPlanksWarped.class; //498
+            list[CRIMSON_DOOR_BLOCK] = BlockDoorCrimson.class; //499
+            list[WARPED_DOOR_BLOCK] = BlockDoorWarped.class; //500
+            list[CRIMSON_TRAPDOOR] = BlockTrapdoorCrimson.class; //501
+            list[WARPED_TRAPDOOR] = BlockTrapdoorWarped.class; //502
+            // 503
+            // 504
+            list[CRIMSON_STANDING_SIGN] = BlockCrimsonSignPost.class; //505
+            list[CRIMSON_WALL_SIGN] = BlockCrimsonWallSign.class; //506
+            list[WARPED_STANDING_SIGN] = BlockWarpedSignPost.class; //507
+            list[WARPED_WALL_SIGN] = BlockWarpedWallSign.class; //508
+            list[CRIMSON_STAIRS] = BlockStairsCrimson.class; //509
+            list[WARPED_STAIRS] = BlockStairsWarped.class; //510
+            list[CRIMSON_FENCE] = BlockFenceCrimson.class; //511
+            list[WARPED_FENCE] = BlockFenceWarped.class; //512
+            list[CRIMSON_FENCE_GATE] = BlockFenceGateCrimson.class; //513
+            list[WARPED_FENCE_GATE] = BlockFenceGateWarped.class; //514
+            list[CRIMSON_BUTTON] = BlockButtonCrimson.class; //515
+            list[WARPED_BUTTON] = BlockButtonWarped.class; //516
+            list[CRIMSON_PRESSURE_PLATE] = BlockPressurePlateCrimson.class; //517
+            list[WARPED_PRESSURE_PLATE] = BlockPressurePlateWarped.class; //518
+            list[CRIMSON_SLAB] = BlockSlabCrimson.class; //519
+            list[WARPED_SLAB] = BlockSlabWarped.class; //520
+            list[CRIMSON_DOUBLE_SLAB] = BlockDoubleSlabCrimson.class; //521
+            list[WARPED_DOUBLE_SLAB] = BlockDoubleSlabWarped.class; //522
+            list[SOUL_TORCH] = BlockSoulTorch.class; //523
+            list[SOUL_LANTERN] = BlockSoulLantern.class; //524
+            list[NETHERITE_BLOCK] = BlockNetheriteBlock.class; //525
+            list[ANCIENT_DERBRIS] = BlockAncientDebris.class; //526
+            list[RESPAWN_ANCHOR] = BlockRespawnAnchor.class; //527
+            list[BLACKSTONE] = BlockBlackstone.class; //528
+            list[POLISHED_BLACKSTONE_BRICKS] = BlockBricksBlackstonePolished.class; //529
+            list[POLISHED_BLACKSTONE_BRICK_STAIRS] = BlockStairsBrickBlackstonePolished.class; //530
+            list[BLACKSTONE_STAIRS] = BlockStairsBlackstone.class; //531
+            list[BLACKSTONE_WALL] = BlockWallBlackstone.class; //532
+            list[POLISHED_BLACKSTONE_BRICK_WALL] = BlockWallBrickBlackstonePolished.class; //533
+            list[CHISELED_POLISHED_BLACKSTONE] = BlockBlackstonePolishedChiseled.class; //534
+            list[CRACKED_POLISHED_BLACKSTONE_BRICKS] = BlockBricksBlackstonePolishedCracked.class; //535
+            list[GILDED_BLACKSTONE] = BlockBlackstoneGilded.class; //536
+            list[BLACKSTONE_SLAB] = BlockSlabBlackstone.class; //537
+            list[BLACKSTONE_DOUBLE_SLAB] = BlockDoubleSlabBlackstone.class; //538
+            list[POLISHED_BLACKSTONE_BRICK_SLAB] = BlockSlabBrickBlackstonePolished.class; //539
+            list[POLISHED_BLACKSTONE_BRICK_DOUBLE_SLAB] = BlockDoubleSlabBrickBlackstonePolished.class; //540
+            list[CHAIN_BLOCK] = BlockChain.class; //541
+            list[TWISTING_VINES] = BlockVinesTwisting.class; //542
+            list[NETHER_GOLD_ORE] = BlockOreGoldNether.class; //543
+            list[CRYING_OBSIDIAN] = BlockObsidianCrying.class; //544
+            list[SOUL_CAMPFIRE_BLOCK] = BlockCampfireSoul.class; //545
+            list[POLISHED_BLACKSTONE] = BlockBlackstonePolished.class; //546
+            list[POLISHED_BLACKSTONE_STAIRS] = BlockStairsBlackstonePolished.class; //547
+            list[POLISHED_BLACKSTONE_SLAB] = BlockSlabBlackstonePolished.class; //548
+            list[POLISHED_BLACKSTONE_DOUBLE_SLAB] = BlockDoubleSlabBlackstonePolished.class; //549
+            list[POLISHED_BLACKSTONE_PRESSURE_PLATE] = BlockPressurePlateBlackstonePolished.class; //550
+            list[POLISHED_BLACKSTONE_BUTTON] = BlockButtonBlackstonePolished.class; //551
+            list[POLISHED_BLACKSTONE_WALL] = BlockWallBlackstonePolished.class; //552
+            list[WARPED_HYPHAE] = BlockHyphaeWarped.class; //553
+            list[CRIMSON_HYPHAE] = BlockHyphaeCrimson.class; //554
+            list[STRIPPED_CRIMSON_HYPHAE] = BlockHyphaeStrippedCrimson.class; //555
+            list[STRIPPED_WARPED_HYPHAE] = BlockHyphaeStrippedWarped.class; //556
+            list[CHISELED_NETHER_BRICKS] = BlockBricksNetherChiseled.class; //557
+            list[CRACKED_NETHER_BRICKS] = BlockBricksNetherCracked.class; //558
+            list[QUARTZ_BRICKS] = BlockBricksQuartz.class; //559
+            
+            initializing = true;
+            
+            for (int id = 0; id < MAX_BLOCK_ID; id++) {
+                Class<? extends Block> c = list[id];
                 if (c != null) {
                     Block block;
                     try {
-                        block = (Block) c.newInstance();
+                        block = c.getDeclaredConstructor().newInstance();
+                        String persistenceName = block.getPersistenceName();
+                        BlockStateRegistry.registerPersistenceName(id, persistenceName);
                         try {
-                            Constructor constructor = c.getDeclaredConstructor(int.class);
+                            Constructor<? extends Block> constructor = c.getDeclaredConstructor(int.class);
                             constructor.setAccessible(true);
-                            for (int data = 0; data < 16; ++data) {
-                                fullList[(id << 4) | data] = (Block) constructor.newInstance(data);
+                            for (int data = 0; data < (1 << DATA_BITS); ++data) {
+                                int fullId = (id << DATA_BITS) | data;
+                                Block b;
+                                try {
+                                    b = constructor.newInstance(data);
+                                    if (b.getDamage() != data) {
+                                        b = new BlockUnknown(id, data);
+                                    }
+                                } catch (InvocationTargetException wrapper) {
+                                    Throwable uncaught = wrapper.getTargetException();
+                                    if (!(uncaught instanceof InvalidBlockDamageException)) {
+                                        log.error("Error while registering {} with meta {}", c.getName(), data, uncaught);
+                                    }
+                                    b = new BlockUnknown(id, data);
+                                }
+                                fullList[fullId] = b;
                             }
                             hasMeta[id] = true;
                         } catch (NoSuchMethodException ignore) {
-                            for (int data = 0; data < 16; ++data) {
-                                fullList[(id << 4) | data] = block;
+                            for (int data = 0; data < DATA_SIZE; ++data) {
+                                int fullId = (id << DATA_BITS) | data;
+                                fullList[fullId] = block;
                             }
                         }
                     } catch (Exception e) {
-                        Server.getInstance().getLogger().error("Error while registering " + c.getName(), e);
-                        for (int data = 0; data < 16; ++data) {
-                            fullList[(id << 4) | data] = new BlockUnknown(id, data);
+                        log.error("Error while registering {}", c.getName(), e);
+                        for (int data = 0; data < DATA_SIZE; ++data) {
+                            fullList[(id << DATA_BITS) | data] = new BlockUnknown(id, data);
                         }
-                        return;
+                        block = fullList[id << DATA_BITS];
                     }
 
                     solid[id] = block.isSolid();
                     transparent[id] = block.isTransparent();
+                    diffusesSkyLight[id] = block.diffusesSkyLight();
                     hardness[id] = block.getHardness();
                     light[id] = block.getLightLevel();
-
-                    if (block.isSolid()) {
-                        if (block.isTransparent()) {
-                            if (block instanceof BlockLiquid || block instanceof BlockIce) {
-                                lightFilter[id] = 2;
-                            } else {
-                                lightFilter[id] = 1;
-                            }
-                        } else {
-                            lightFilter[id] = 15;
-                        }
-                    } else {
-                        lightFilter[id] = 1;
-                    }
+                    lightFilter[id] = block.getLightFilter();
                 } else {
                     lightFilter[id] = 1;
-                    for (int data = 0; data < 16; ++data) {
-                        fullList[(id << 4) | data] = new BlockUnknown(id, data);
+                    for (int data = 0; data < DATA_SIZE; ++data) {
+                        fullList[(id << DATA_BITS) | data] = new BlockUnknown(id, data);
                     }
                 }
             }
+            initializing = false;
         }
     }
+    //</editor-fold>
 
+    //<editor-fold desc="static getters" defaultstate="collapsed">
     public static Block get(int id) {
-        return fullList[id << 4].clone();
+        if (id < 0) {
+            id = 255 - id;
+        }
+        return fullList[id << DATA_BITS].clone();
     }
-
+    
+    @Deprecated
+    @DeprecationDetails(reason = "The meta is limited to 32 bits", replaceWith = "BlockState.getBlock()", since = "1.4.0.0-PN")
     public static Block get(int id, Integer meta) {
+        if (id < 0) {
+            id = 255 - id;
+        }
         if (meta != null) {
-            return fullList[(id << 4) + meta].clone();
+            int iMeta = meta;
+            if (iMeta <= DATA_SIZE) {
+                return fullList[(id << DATA_BITS) | meta].clone();
+            } else {
+                Block block = fullList[id << DATA_BITS].clone();
+                block.setDamage(iMeta);
+                return block;
+            }
         } else {
-            return fullList[id << 4].clone();
+            return fullList[id << DATA_BITS].clone();
         }
     }
 
+    @Deprecated
+    @DeprecationDetails(reason = "The meta is limited to 32 bits", replaceWith = "BlockState.getBlock()", since = "1.4.0.0-PN")
     public static Block get(int id, Integer meta, Position pos) {
-        Block block = fullList[(id << 4) | (meta == null ? 0 : meta)].clone();
+        return get(id, meta, pos, 0);
+    }
+
+    @Deprecated
+    @DeprecationDetails(reason = "The meta is limited to 32 bits", replaceWith = "BlockState.getBlock()", since = "1.4.0.0-PN")
+    @SuppressWarnings("unchecked")
+    public static Block get(int id, Integer meta, Position pos, int layer) {
+        if (id < 0) {
+            id = 255 - id;
+        }
+
+        Block block;
+        if (meta != null && meta > DATA_SIZE) {
+            block = fullList[id << DATA_BITS].clone();
+            block.setDamage(meta);
+        } else {
+            block = fullList[(id << DATA_BITS) | (meta == null ? 0 : meta)].clone();
+        }
+        
         if (pos != null) {
             block.x = pos.x;
             block.y = pos.y;
             block.z = pos.z;
             block.level = pos.level;
+            block.layer = layer;
         }
         return block;
     }
 
+    @Deprecated
+    @DeprecationDetails(reason = "The meta is limited to 32 bits", replaceWith = "BlockState.getBlock()", since = "1.4.0.0-PN")
     public static Block get(int id, int data) {
-        return fullList[(id << 4) + data].clone();
+        if (id < 0) {
+            id = 255 - id;
+        }
+        if (data < DATA_SIZE) {
+            return fullList[(id << DATA_BITS) | data].clone();
+        } else {
+            Block block = fullList[(id << DATA_BITS)].clone();
+            block.setDamage(data);
+            return block;
+        }
     }
 
+    @Deprecated
+    @DeprecationDetails(reason = "The meta is limited to 32 bits", since = "1.3.0.0-PN")
     public static Block get(int fullId, Level level, int x, int y, int z) {
+        return get(fullId, level, x, y, z, 0);
+    }
+
+    @Deprecated
+    @DeprecationDetails(reason = "The meta is limited to 32 bits", since = "1.3.0.0-PN")
+    public static Block get(int fullId, Level level, int x, int y, int z, int layer) {
         Block block = fullList[fullId].clone();
         block.x = x;
         block.y = y;
         block.z = z;
         block.level = level;
+        block.layer = layer;
         return block;
     }
 
-    public boolean place(Item item, Block block, Block target, BlockFace face, double fx, double fy, double fz, Player player) {
+    @Deprecated
+    @DeprecationDetails(reason = "The meta is limited to 32 bits", replaceWith = "BlockState.getBlock()", since = "1.4.0.0-PN")
+    @PowerNukkitOnly
+    @Since("1.3.0.0-PN")
+    public static Block get(int id, int meta, Level level, int x, int y, int z) {
+        return get(id, meta, level, x, y, z, 0);
+    }
+
+    @Deprecated
+    @DeprecationDetails(reason = "The meta is limited to 32 bits", replaceWith = "BlockState.getBlock()", since = "1.4.0.0-PN")
+    @PowerNukkitOnly
+    @Since("1.3.0.0-PN")
+    public static Block get(int id, int meta, Level level, int x, int y, int z, int layer) {
+        Block block;
+        if (meta <= DATA_SIZE) {
+            block = fullList[id << DATA_BITS | meta].clone();
+        } else {
+            block = fullList[id << DATA_BITS].clone();
+            block.setDamage(meta);
+        }
+        block.x = x;
+        block.y = y;
+        block.z = z;
+        block.level = level;
+        block.layer = layer;
+        return block;
+    }
+    //</editor-fold>
+
+    /**
+     * Register a new block implementation overriding the existing one.
+     * @param blockId The block ID that will be registered. Can't be negative.
+     * @param blockClass The class that overrides {@link Block} and implements this block, 
+     *                   it must have a constructor without params and optionally one that accepts {@code Number} or {@code int} 
+     * @param persistenceName The block persistence name, must use the format namespace:block_name
+     * @param receivesRandomTick If the block should receive random ticks from the level
+     */
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    public static void registerBlockImplementation(int blockId, @Nonnull Class<? extends Block> blockClass, @Nonnull String persistenceName, boolean receivesRandomTick) {
+        Preconditions.checkArgument(blockId >= 0, "Negative block id %s", blockId);
+        Preconditions.checkNotNull(blockClass, "blockClass was null");
+        Preconditions.checkNotNull(persistenceName, "persistenceName was null");
+        Preconditions.checkArgument(blockId < MAX_BLOCK_ID, "blockId %s must be less than %s", blockId, MAX_BLOCK_ID);
+        Block mainBlock;
+        BlockProperties properties;
+        try {
+            mainBlock = blockClass.getConstructor().newInstance();
+            mainBlock.clone(); // Make sure clone works
+            properties = mainBlock.getProperties();
+        } catch (Exception e) {
+            throw new IllegalArgumentException("Could not create the main block of "+blockClass, e);
+        }
+        
+        list[blockId] = blockClass;
+        solid[blockId] = mainBlock.isSolid();
+        transparent[blockId] = mainBlock.isTransparent();
+        diffusesSkyLight[blockId] = mainBlock.diffusesSkyLight();
+        hardness[blockId] = mainBlock.getHardness();
+        light[blockId] = mainBlock.getLightLevel();
+        lightFilter[blockId] = mainBlock.getLightFilter();
+        fullList[blockId << DATA_BITS] = mainBlock;
+        
+        boolean metaAdded = false;
+        if (properties.getBitSize() > 0) {
+            for (int data = 0; data < (1 << DATA_BITS); ++data) {
+                int fullId = (blockId << DATA_BITS) | data;
+                Constructor<? extends Block> constructor = null;
+                Exception exception = null;
+                try {
+                    Constructor<? extends Block> testing = blockClass.getDeclaredConstructor(Number.class);
+                    testing.newInstance(0).clone();
+                    constructor = testing;
+                } catch (ReflectiveOperationException e) {
+                    exception = e;
+                    try {
+                        Constructor<? extends Block> testing = blockClass.getDeclaredConstructor(int.class);
+                        testing.newInstance(0).clone();
+                        constructor = testing;
+                        exception = null;
+                    } catch (ReflectiveOperationException e2) {
+                        e.addSuppressed(e2);
+                        try {
+                            Constructor<? extends Block> testing = blockClass.getDeclaredConstructor(Integer.class);
+                            testing.newInstance(0).clone();
+                            constructor = testing;
+                            exception = null;
+                        } catch (ReflectiveOperationException e3) {
+                            e.addSuppressed(e3);
+                        }
+                    }
+                }
+                
+                Block b = null;
+                if (constructor != null) {
+                    try {
+                        b = constructor.newInstance(data);
+                        if (b.getDamage() != data) {
+                            b = new BlockUnknown(blockId, data);
+                        }
+                    } catch (InvocationTargetException wrapper) {
+                        Throwable uncaught = wrapper.getTargetException();
+                        if (uncaught instanceof InvalidBlockStateException) {
+                            b = new BlockUnknown(blockId, data);
+                        }
+                    } catch (ReflectiveOperationException e) {
+                        exception = e;
+                    }
+                }
+                
+                if (b == null) {
+                    try {
+                        b = BlockState.of(blockId, data).getBlock();
+                    } catch (InvalidBlockStateException e) {
+                        b = new BlockUnknown(blockId, data);
+                    } catch (Exception e) {
+                        b = new BlockUnknown(blockId, data);
+                        if (exception != null) {
+                            exception.addSuppressed(e);
+                        } else {
+                            log.error("Error while registering {} with meta {}", blockClass.getName(), data, exception);
+                        }
+                    }
+                }
+                
+                if (!metaAdded && !(b instanceof BlockUnknown)) {
+                    metaAdded = true;
+                }
+                
+                fullList[fullId] = b;
+            }
+            hasMeta[blockId] = metaAdded;
+        } else {
+            hasMeta[blockId] = false;
+        }
+        
+        Level.setCanRandomTick(blockId, receivesRandomTick);
+    }
+    
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    @Nullable
+    private MutableBlockState mutableState;
+    
+    @PowerNukkitOnly
+    public int layer;
+    
+    protected Block() {}
+
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    @Nonnull
+    protected final MutableBlockState getMutableState() {
+        if (mutableState == null) {
+            mutableState = getProperties().createMutableState(getId());
+        }
+        return mutableState;
+    }
+
+    /**
+     * Place and initialize a this block correctly in the world.
+     * <p>The current instance must have level, x, y, z, and layer properties already set before calling this method.</p>
+     * @param item The item being used to place the block. Should be used as an optional reference, may mismatch the block that is being placed depending on plugin implementations.
+     * @param block The current block that is in the world and is getting replaced by this instance. It has the same x, y, z, layer, and level as this block.
+     * @param target The block that was clicked to create the place action in this block position.
+     * @param face The face that was clicked in the target block
+     * @param fx The detailed X coordinate of the clicked target block face
+     * @param fy The detailed Y coordinate of the clicked target block face
+     * @param fz The detailed Z coordinate of the clicked target block face
+     * @param player The player that is placing the block. May be null.
+     * @return {@code true} if the block was properly place. The implementation is responsible for reverting any partial change.
+     */
+    public boolean place(@Nonnull Item item, @Nonnull Block block, @Nonnull Block target, @Nonnull BlockFace face, double fx, double fy, double fz, @Nullable Player player) {
         return this.getLevel().setBlock(this, this, true, true);
     }
 
@@ -408,18 +950,41 @@ public abstract class Block extends Position implements Metadatable, Cloneable, 
     }
 
     public boolean onBreak(Item item) {
-        return this.getLevel().setBlock(this, Block.get(BlockID.AIR), true, true);
+        return this.getLevel().setBlock(this, layer, Block.get(BlockID.AIR), true, true);
     }
 
     public int onUpdate(int type) {
         return 0;
     }
+    
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    public int onTouch(@Nullable Player player, PlayerInteractEvent.Action action) {
+        return onUpdate(Level.BLOCK_UPDATE_TOUCH);
+    }
+    
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    public void onNeighborChange(@Nonnull BlockFace side) {
+        
+    }
 
-    public boolean onActivate(Item item) {
+    public boolean onActivate(@Nonnull Item item) {
         return this.onActivate(item, null);
     }
 
-    public boolean onActivate(Item item, Player player) {
+    public boolean onActivate(@Nonnull Item item, @Nullable Player player) {
+        return false;
+    }
+    
+    @Since("1.2.1.0-PN")
+    @PowerNukkitOnly
+    public void afterRemoval(Block newBlock, boolean update) {
+    }
+
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    public boolean isSoulSpeedCompatible() {
         return false;
     }
 
@@ -467,8 +1032,31 @@ public abstract class Block extends Position implements Metadatable, Cloneable, 
         return true;
     }
 
+    /**
+     * Check if blocks can be attached in the given side.
+     */
+    @PowerNukkitOnly
+    @Since("1.3.0.0-PN")
+    public boolean isSolid(BlockFace side) {
+        return isSideFull(side);
+    }
+
+    // https://minecraft.gamepedia.com/Opacity#Lighting
+    public boolean diffusesSkyLight() {
+        return false;
+    }
+
     public boolean canBeFlowedInto() {
         return false;
+    }
+
+    @PowerNukkitOnly
+    public int getWaterloggingLevel() {
+        return 0;
+    }
+
+    public final boolean canWaterloggingFlowInto() {
+        return canBeFlowedInto() || getWaterloggingLevel() > 1;
     }
 
     public boolean canBeActivated() {
@@ -487,6 +1075,18 @@ public abstract class Block extends Position implements Metadatable, Cloneable, 
         return true;
     }
 
+    public boolean canBePulled() {
+        return true;
+    }
+
+    public boolean breaksWhenMoved() {
+        return false;
+    }
+
+    public boolean sticksToPiston() {
+        return true;
+    }
+
     public boolean hasComparatorInputOverride() {
         return false;
     }
@@ -494,6 +1094,16 @@ public abstract class Block extends Position implements Metadatable, Cloneable, 
     public int getComparatorInputOverride() {
         return 0;
     }
+
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    public boolean canHarvest(Item item) {
+        return getToolTier() == 0 || getToolType() == 0 || correctTool0(getToolType(), item, getId()) && item.getTier() >= getToolTier();
+    }
+
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    public int getToolTier() { return 0; }
 
     public boolean canBeClimbed() {
         return false;
@@ -504,29 +1114,73 @@ public abstract class Block extends Position implements Metadatable, Cloneable, 
     }
 
     public abstract String getName();
-
+    
     public abstract int getId();
+
+    public int getItemId() {
+        int id = getId();
+        if (id > 255) {
+            return 255 - id;
+        } else {
+            return id;
+        }
+    }
 
     /**
      * The full id is a combination of the id and data.
      * @return full id
+     * @deprecated PowerNukkit: The meta is limited to 32 bits
      */
+    @Deprecated
+    @DeprecationDetails(reason = "The meta is limited to 32 bits", since = "1.3.0.0-PN")
     public int getFullId() {
-        return (getId() << 4);
+        return mutableState == null? 0 : mutableState.getFullId();
     }
 
+    /**
+     * The properties that fully describe all possible and valid states that this block can have. 
+     */
+    @Nonnull
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    public BlockProperties getProperties() {
+        return CommonBlockProperties.EMPTY_PROPERTIES;
+    }
+    
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    @Nonnull
+    public final BlockState getCurrentState() {
+        return mutableState == null? BlockState.of(getId()) : mutableState.getCurrentState();
+    }
+    
+    @PowerNukkitOnly
+    @Since("1.3.0.0-PN")
+    public final int getRuntimeId() {
+        return getCurrentState().getRuntimeId();
+    }
+    
     public void addVelocityToEntity(Entity entity, Vector3 vector) {
 
     }
 
+    @Deprecated
+    @DeprecationDetails(reason = "Limited to 32 bits", since = "1.4.0.0-PN")
     public int getDamage() {
-        return 0;
+        return mutableState == null? 0 : mutableState.getBigDamage();
     }
 
+    @Deprecated
+    @DeprecationDetails(reason = "Limited to 32 bits", since = "1.4.0.0-PN")
     public void setDamage(int meta) {
-        // Do nothing
+        if (meta == 0 && isDefaultState()) {
+            return;
+        }
+        getMutableState().setDataStorageFromInt(meta);
     }
 
+    @Deprecated
+    @DeprecationDetails(reason = "Limited to 32 bits", since = "1.4.0.0-PN")
     public final void setDamage(Integer meta) {
         setDamage((meta == null ? 0 : meta & 0x0f));
     }
@@ -540,16 +1194,29 @@ public abstract class Block extends Position implements Metadatable, Cloneable, 
 
     public Item[] getDrops(Item item) {
         if (this.getId() < 0 || this.getId() > list.length) { //Unknown blocks
-            return new Item[0];
-        } else {
+            return Item.EMPTY_ARRAY;
+        } else if(canHarvestWithHand() || canHarvest(item)) {
             return new Item[]{
                     this.toItem()
             };
         }
+        return Item.EMPTY_ARRAY;
+    }
+
+    private double toolBreakTimeBonus0(Item item) {
+        return toolBreakTimeBonus0(toolType0(item, getId()), item.getTier(), getId());
     }
 
     private static double toolBreakTimeBonus0(int toolType, int toolTier, int blockId) {
-        if (toolType == ItemTool.TYPE_SWORD) return blockId == Block.COBWEB ? 15.0 : 1.0;
+        if (toolType == ItemTool.TYPE_SWORD){
+            if (blockId == BlockID.COBWEB) {
+                return 15.0;
+            }
+            if (blockId == BlockID.BAMBOO) {
+                return 30.0;
+            }
+            return 1.0;
+        }
         if (toolType == ItemTool.TYPE_SHEARS) {
             if (blockId == Block.WOOL || blockId == LEAVES || blockId == LEAVES2) {
                 return 5.0;
@@ -573,6 +1240,9 @@ public abstract class Block extends Position implements Metadatable, Cloneable, 
             case ItemTool.TIER_GOLD:
                 return 12.0;
             default:
+                if (toolTier == ItemTool.TIER_NETHERITE) {
+                    return 9.0;
+                }
                 return 1.0;
         }
     }
@@ -586,7 +1256,9 @@ public abstract class Block extends Position implements Metadatable, Cloneable, 
         return 1.0 + (0.2 * hasteLoreLevel);
     }
 
-    private static int toolType0(Item item) {
+    @PowerNukkitDifference(info = "Special condition for the leaves", since = "1.4.0.0-PN")
+    private static int toolType0(Item item, int blockId) {
+        if((blockId == LEAVES && item.isHoe()) || (blockId == LEAVES2 && item.isHoe())) return ItemTool.TYPE_SHEARS;
         if (item.isSword()) return ItemTool.TYPE_SWORD;
         if (item.isShovel()) return ItemTool.TYPE_SHOVEL;
         if (item.isPickaxe()) return ItemTool.TYPE_PICKAXE;
@@ -596,8 +1268,14 @@ public abstract class Block extends Position implements Metadatable, Cloneable, 
         return ItemTool.TYPE_NONE;
     }
 
-    private static boolean correctTool0(int blockToolType, Item item) {
-        return (blockToolType == ItemTool.TYPE_SWORD && item.isSword()) ||
+    @PowerNukkitDifference(info = "Special condition for the leaves", since = "1.4.0.0-PN")
+    private static boolean correctTool0(int blockToolType, Item item, int blockId) {
+        if((blockId == LEAVES && item.isHoe()) ||
+           (blockId == LEAVES2 && item.isHoe())){
+            return (blockToolType == ItemTool.TYPE_SHEARS && item.isHoe());
+        } else if (blockId == BAMBOO  && item.isSword()) {
+            return (blockToolType == ItemTool.TYPE_AXE && item.isSword());
+        } else return (blockToolType == ItemTool.TYPE_SWORD && item.isSword()) ||
                 (blockToolType == ItemTool.TYPE_SHOVEL && item.isShovel()) ||
                 (blockToolType == ItemTool.TYPE_PICKAXE && item.isPickaxe()) ||
                 (blockToolType == ItemTool.TYPE_AXE && item.isAxe()) ||
@@ -620,6 +1298,83 @@ public abstract class Block extends Position implements Metadatable, Cloneable, 
         return 1.0 / speed;
     }
 
+    @Nonnull
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    public double calculateBreakTime(@Nonnull Item item) {
+        return calculateBreakTime(item, null);
+    }
+
+    @Nonnull
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    public double calculateBreakTime(@Nonnull Item item, @Nullable Player player) {
+        double seconds = 0;
+        double blockHardness = getHardness();
+        boolean canHarvest = canHarvest(item);
+
+        if (canHarvest) {
+            seconds = blockHardness * 1.5;
+        } else {
+            seconds = blockHardness * 5;
+        }
+
+        double speedMultiplier = 1;
+        boolean hasConduitPower = false;
+        boolean hasAquaAffinity = false;
+        int hasteEffectLevel = 0;
+        int miningFatigueLevel = 0;
+
+        if (player != null) {
+            hasConduitPower = player.hasEffect(Effect.CONDUIT_POWER);
+            hasAquaAffinity = Optional.ofNullable(player.getInventory().getHelmet().getEnchantment(Enchantment.ID_WATER_WORKER))
+                    .map(Enchantment::getLevel).map(l -> l >= 1).orElse(false);
+            hasteEffectLevel = Optional.ofNullable(player.getEffect(Effect.HASTE))
+                    .map(Effect::getAmplifier).orElse(0);
+            miningFatigueLevel = Optional.ofNullable(player.getEffect(Effect.MINING_FATIGUE))
+                    .map(Effect::getAmplifier).orElse(0);
+        }
+
+        if (correctTool0(getToolType(), item, getId())) {
+            speedMultiplier = toolBreakTimeBonus0(item);
+
+            int efficiencyLevel = Optional.ofNullable(item.getEnchantment(Enchantment.ID_EFFICIENCY))
+                    .map(Enchantment::getLevel).orElse(0);
+
+            if (canHarvest && efficiencyLevel > 0) {
+                speedMultiplier += efficiencyLevel ^ 2 + 1;
+            }
+
+            if (hasConduitPower) hasteEffectLevel = Integer.max(hasteEffectLevel, 2);
+
+            if (hasteEffectLevel > 0) {
+                speedMultiplier *= 1 + (0.2 * hasteEffectLevel);
+            }
+
+        }
+
+        if (miningFatigueLevel > 0) {
+            speedMultiplier /= 3 ^ miningFatigueLevel;
+        }
+
+        seconds /= speedMultiplier;
+
+        if (player != null) {
+            if (player.isInsideOfWater() && !hasAquaAffinity ) {
+                seconds *= hasConduitPower && blockHardness >= 0.5 ? 2.5 : 5;
+            }
+
+            if (!player.isOnGround()) {
+                seconds *= 5;
+            }
+        }
+
+        return seconds;
+    }
+  
+    @DeprecationDetails(since = "1.4.0.0-PN", reason = "Not completely accurate", replaceWith = "calculateBreakeTime()")
+    @Deprecated
+    @PowerNukkitDifference(info = "Special condition for the leaves", since = "1.4.0.0-PN")
     public double getBreakTime(Item item, Player player) {
         Objects.requireNonNull(item, "getBreakTime: Item can not be null");
         Objects.requireNonNull(player, "getBreakTime: Player can not be null");
@@ -630,16 +1385,20 @@ public abstract class Block extends Position implements Metadatable, Cloneable, 
         }
 
         int blockId = getId();
-        boolean correctTool = correctTool0(getToolType(), item)
-                || item.isShears() && (blockId == COBWEB || blockId == LEAVES || blockId == LEAVES2);
+        boolean correctTool = correctTool0(getToolType(), item, blockId);
         boolean canHarvestWithHand = canHarvestWithHand();
-        int itemToolType = toolType0(item);
+        int itemToolType = toolType0(item, blockId);
         int itemTier = item.getTier();
         int efficiencyLoreLevel = Optional.ofNullable(item.getEnchantment(Enchantment.ID_EFFICIENCY))
                 .map(Enchantment::getLevel).orElse(0);
         int hasteEffectLevel = Optional.ofNullable(player.getEffect(Effect.HASTE))
                 .map(Effect::getAmplifier).orElse(0);
-        boolean insideOfWaterWithoutAquaAffinity = player.isInsideOfWater() &&
+        //TODO Fix the break time with CONDUIT_POWER, it's not right
+        int conduitPowerLevel = Optional.ofNullable(player.getEffect(Effect.CONDUIT_POWER))
+                .map(e -> /*(e.getAmplifier() +1) * 4*/ e.getAmplifier())
+                .orElse(0);
+        hasteEffectLevel += conduitPowerLevel;
+        boolean insideOfWaterWithoutAquaAffinity = player.isInsideOfWater() && conduitPowerLevel <= 0 &&
                 Optional.ofNullable(player.getInventory().getHelmet().getEnchantment(Enchantment.ID_WATER_WORKER))
                         .map(Enchantment::getLevel).map(l -> l >= 1).orElse(false);
         boolean outOfWaterButNotOnGround = (!player.isInsideOfWater()) && (!player.isOnGround());
@@ -648,15 +1407,18 @@ public abstract class Block extends Position implements Metadatable, Cloneable, 
     }
 
     /**
-     * @deprecated This function is lack of Player class and is not accurate enough, use #getBreakTime(Item, Player)
+     * @deprecated This function is lack of Player class and is not accurate enough, use {@link #getBreakTime(Item, Player)}
      * @param item item used
      * @return break time
      */
+    @PowerNukkitDifference(info = "Special condition for the hoe and netherie support", since = "1.4.0.0-PN")
     @Deprecated
     public double getBreakTime(Item item) {
         double base = this.getHardness() * 1.5;
         if (this.canBeBrokenWith(item)) {
-            if (this.getToolType() == ItemTool.TYPE_SHEARS && item.isShears()) {
+            if (
+            (this.getToolType() == ItemTool.TYPE_SHEARS && item.isShears()) ||
+            (this.getToolType() == ItemTool.TYPE_SHEARS && item.isHoe())) {
                 base /= 15;
             } else if (
                     (this.getToolType() == ItemTool.TYPE_PICKAXE && item.isPickaxe()) ||
@@ -702,24 +1464,33 @@ public abstract class Block extends Position implements Metadatable, Cloneable, 
     }
 
     public Block getSide(BlockFace face) {
+        return getSideAtLayer(layer, face);
+    }
+
+    public Block getSide(BlockFace face, int step) {
+        return getSideAtLayer(layer, face, step);
+    }
+
+    public Block getSideAtLayer(int layer, BlockFace face) {
         if (this.isValid()) {
-            return this.getLevel().getBlock((int) x + face.getXOffset(), (int) y + face.getYOffset(), (int) z + face.getZOffset());
+            return this.getLevel().getBlock((int) x + face.getXOffset(), (int) y + face.getYOffset(), (int) z + face.getZOffset(), layer);
         }
         return this.getSide(face, 1);
     }
 
-    public Block getSide(BlockFace face, int step) {
+    public Block getSideAtLayer(int layer, BlockFace face, int step) {
         if (this.isValid()) {
             if (step == 1) {
-                return this.getLevel().getBlock((int) x + face.getXOffset(), (int) y + face.getYOffset(), (int) z + face.getZOffset());
+                return this.getLevel().getBlock((int) x + face.getXOffset(), (int) y + face.getYOffset(), (int) z + face.getZOffset(), layer);
             } else {
-                return this.getLevel().getBlock((int) x + face.getXOffset() * step, (int) y + face.getYOffset() * step, (int) z + face.getZOffset() * step);
+                return this.getLevel().getBlock((int) x + face.getXOffset() * step, (int) y + face.getYOffset() * step, (int) z + face.getZOffset() * step, layer);
             }
         }
         Block block = Block.get(Item.AIR, 0);
         block.x = (int) x + face.getXOffset() * step;
         block.y = (int) y + face.getYOffset() * step;
         block.z = (int) z + face.getZOffset() * step;
+        block.layer = layer;
         return block;
     }
 
@@ -731,12 +1502,20 @@ public abstract class Block extends Position implements Metadatable, Cloneable, 
         return getSide(BlockFace.UP, step);
     }
 
+    public Block up(int step, int layer) {
+        return getSideAtLayer(layer, BlockFace.UP, step);
+    }
+
     public Block down() {
         return down(1);
     }
 
     public Block down(int step) {
         return getSide(BlockFace.DOWN, step);
+    }
+
+    public Block down(int step, int layer) {
+        return getSideAtLayer(layer, BlockFace.DOWN, step);
     }
 
     public Block north() {
@@ -747,12 +1526,20 @@ public abstract class Block extends Position implements Metadatable, Cloneable, 
         return getSide(BlockFace.NORTH, step);
     }
 
+    public Block north(int step, int layer) {
+        return getSideAtLayer(layer, BlockFace.NORTH, step);
+    }
+
     public Block south() {
         return south(1);
     }
 
     public Block south(int step) {
         return getSide(BlockFace.SOUTH, step);
+    }
+
+    public Block south(int step, int layer) {
+        return getSideAtLayer(layer, BlockFace.SOUTH, step);
     }
 
     public Block east() {
@@ -763,6 +1550,10 @@ public abstract class Block extends Position implements Metadatable, Cloneable, 
         return getSide(BlockFace.EAST, step);
     }
 
+    public Block east(int step, int layer) {
+        return getSideAtLayer(layer, BlockFace.EAST, step);
+    }
+
     public Block west() {
         return west(1);
     }
@@ -771,9 +1562,14 @@ public abstract class Block extends Position implements Metadatable, Cloneable, 
         return getSide(BlockFace.WEST, step);
     }
 
+    public Block west(int step, int layer) {
+        return getSideAtLayer(layer, BlockFace.WEST, step);
+    }
+
     @Override
     public String toString() {
-        return "Block[" + this.getName() + "] (" + this.getId() + ":" + this.getDamage() + ")";
+        return "Block[" + this.getName() + "] (" + this.getId() + ":" + (mutableState != null? mutableState.getDataStorage() : "0")  + ")" + 
+                (isValid()? " at "+super.toString() : "");
     }
 
     public boolean collidesWithBB(AxisAlignedBB bb) {
@@ -898,20 +1694,20 @@ public abstract class Block extends Position implements Metadatable, Cloneable, 
             return null;
         }
 
-        int f = -1;
+        BlockFace f = null;
 
         if (vector == v1) {
-            f = 4;
+            f = BlockFace.WEST;
         } else if (vector == v2) {
-            f = 5;
+            f = BlockFace.EAST;
         } else if (vector == v3) {
-            f = 0;
+            f = BlockFace.DOWN;
         } else if (vector == v4) {
-            f = 1;
+            f = BlockFace.UP;
         } else if (vector == v5) {
-            f = 2;
+            f = BlockFace.NORTH;
         } else if (vector == v6) {
-            f = 3;
+            f = BlockFace.SOUTH;
         }
 
         return MovingObjectPosition.fromBlock((int) this.x, (int) this.y, (int) this.z, f, vector.add(this.x, this.y, this.z));
@@ -951,7 +1747,9 @@ public abstract class Block extends Position implements Metadatable, Cloneable, 
     }
 
     public Block clone() {
-        return (Block) super.clone();
+        Block clone = (Block) super.clone();
+        clone.mutableState = mutableState != null? mutableState.copy() : null;
+        return clone;
     }
 
     public int getWeakPower(BlockFace face) {
@@ -974,8 +1772,83 @@ public abstract class Block extends Position implements Metadatable, Cloneable, 
         return 0;
     }
 
+    /**
+     * Check if the block is not transparent, is solid and can't provide redstone power.
+     */
     public boolean isNormalBlock() {
         return !isTransparent() && isSolid() && !isPowerSource();
+    }
+
+    /**
+     * Check if the block is not transparent, is solid and is a full cube like a stone block.
+     */
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    public boolean isSimpleBlock() {
+        return !isTransparent() && isSolid() && isFullBlock();
+    }
+
+    /**
+     * Check if the given face is fully occupied by the block bounding box.
+     * @param face The face to be checked
+     * @return If and ony if the bounding box completely cover the face
+     */
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    public boolean isSideFull(BlockFace face) {
+        AxisAlignedBB boundingBox = getBoundingBox();
+        if (boundingBox == null) {
+            return false;
+        }
+        
+        if (face.getAxis().getPlane() == BlockFace.Plane.HORIZONTAL) {
+            if (boundingBox.getMinY() != getY() || boundingBox.getMaxY() != getY() + 1) {
+                return false;
+            }
+            int offset = face.getXOffset();
+            if (offset < 0) {
+                return boundingBox.getMinX() == getX()
+                        && boundingBox.getMinZ() == getZ() && boundingBox.getMaxZ() == getZ() + 1;
+            } else if (offset > 0) {
+                return boundingBox.getMaxX() == getX() + 1
+                        && boundingBox.getMaxZ() == getZ() + 1 && boundingBox.getMinZ() == getZ();
+            }
+
+            offset = face.getZOffset();
+            if (offset < 0) {
+                return boundingBox.getMinZ() == getZ()
+                        && boundingBox.getMinX() == getX() && boundingBox.getMaxX() == getX() + 1;
+            }
+            
+            return boundingBox.getMaxZ() == getZ() + 1
+                    && boundingBox.getMaxX() == getX() + 1 && boundingBox.getMinX() == getX();
+        }
+        
+        if (boundingBox.getMinX() != getX() || boundingBox.getMaxX() != getX() + 1 || 
+                boundingBox.getMinZ() != getZ() || boundingBox.getMaxZ() != getZ() + 1) {
+            return false;
+        }
+        
+        if (face.getYOffset() < 0) {
+            return boundingBox.getMinY() == getY();
+        }
+        
+        return boundingBox.getMaxY() == getY() + 1;
+    }
+
+    /**
+     * Check if the block occupies the entire block space, like a stone and normal glass blocks
+     */
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    public boolean isFullBlock() {
+        AxisAlignedBB boundingBox = getBoundingBox();
+        if (boundingBox == null) {
+            return false;
+        }
+        return boundingBox.getMinX() == getX() && boundingBox.getMaxX() == getX() + 1 
+                && boundingBox.getMinY() == getY() && boundingBox.getMaxY() == getY() + 1
+                && boundingBox.getMinZ() == getZ() && boundingBox.getMaxZ() == getZ() + 1;
     }
 
     public static boolean equals(Block b1, Block b2) {
@@ -983,14 +1856,341 @@ public abstract class Block extends Position implements Metadatable, Cloneable, 
     }
 
     public static boolean equals(Block b1, Block b2, boolean checkDamage) {
-        return b1 != null && b2 != null && b1.getId() == b2.getId() && (!checkDamage || b1.getDamage() == b2.getDamage());
+        if (b1 == null || b2 == null || b1.getId() != b2.getId()) {
+            return false;
+        }
+        if (checkDamage) {
+            boolean b1Default = b1.isDefaultState();
+            boolean b2Default = b2.isDefaultState();
+            if (b1Default != b2Default) {
+                return false;
+            } else if (b1Default) { // both are default
+                return true;
+            } else {
+                return b1.getMutableState().equals(b2.getMutableState());
+            }
+        } else {
+            return true;
+        }
     }
 
+    @PowerNukkitDifference(
+            info = "Prevents players from getting invalid items by limiting the return to the maximum damage defined in getMaxItemDamage()", 
+            since = "1.4.0.0-PN")
     public Item toItem() {
-        return new ItemBlock(this, this.getDamage(), 1);
+        return asItemBlock(1);
+    }
+
+    /**
+     * If the block, when in item form, is resistant to lava and fire and can float on lava like if it was on water.
+     * @since 1.4.0.0-PN
+     */
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    public boolean isLavaResistant() {
+        return false;
+    }
+
+    @Nonnull
+    @Override
+    public final ItemBlock asItemBlock() {
+        return asItemBlock(1);
     }
 
     public boolean canSilkTouch() {
         return false;
+    }
+    
+    @PowerNukkitOnly
+    @Since("1.2.1.0-PN")
+    public boolean mustSilkTouch(Vector3 vector, int layer, BlockFace face, Item item, Player player) {
+        return false;
+    }
+
+    @PowerNukkitOnly
+    @Since("1.2.1.0-PN")
+    public boolean mustDrop(Vector3 vector, int layer, BlockFace face, Item item, Player player) {
+        return false;
+    }
+    
+    public Optional<Block> firstInLayers(Predicate<Block> condition) {
+        return firstInLayers(0, condition);
+    }
+    
+    public Optional<Block> firstInLayers(int startingLayer, Predicate<Block> condition) {
+        int maximumLayer = this.level.requireProvider().getMaximumLayer();
+        for (int layer = startingLayer; layer <= maximumLayer; layer++) {
+            Block block = this.getLevelBlockAtLayer(layer);
+            if (condition.test(block)) {
+                return Optional.of(block);
+            }
+        }
+        
+        return Optional.empty();
+    }
+
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    @Override
+    public void setState(@Nonnull IBlockState state) throws InvalidBlockStateException {
+        if (state.getBlockId() == getId() && this.isDefaultState() && state.isDefaultState()) {
+            return;
+        }
+        getMutableState().setState(state);
+    }
+
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    @Override
+    public void setDataStorage(@Nonnegative @Nonnull Number storage) {
+        if (NukkitMath.isZero(storage) && isDefaultState()) {
+            return;
+        }
+        getMutableState().setDataStorage(storage);
+    }
+
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    @Override
+    public void setDataStorageFromInt(@Nonnegative int storage) {
+        if (storage == 0 && isDefaultState()) {
+            return;
+        }
+        getMutableState().setDataStorageFromInt(storage);
+    }
+
+    @Since("1.4.0.0-PN")
+    @PowerNukkitOnly
+    @Override
+    public boolean setDataStorage(@Nonnegative @Nonnull Number storage, boolean repair, Consumer<BlockStateRepair> callback) {
+        if (NukkitMath.isZero(storage) && isDefaultState()) {
+            return false;
+        }
+        return getMutableState().setDataStorage(storage, repair, callback);
+    }
+
+    @Since("1.4.0.0-PN")
+    @PowerNukkitOnly
+    @Override
+    public boolean setDataStorageFromInt(@Nonnegative int storage, boolean repair, Consumer<BlockStateRepair> callback) {
+        if (storage == 0 && isDefaultState()) {
+            return false;
+        }
+        return getMutableState().setDataStorageFromInt(storage, repair, callback);
+    }
+
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    @Override
+    public void setPropertyValue(@Nonnull String propertyName, @Nullable Serializable value) {
+        if (isDefaultState() && getProperties().isDefaultValue(propertyName, value)) {
+            return;
+        }
+        getMutableState().setPropertyValue(propertyName, value);
+    }
+
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    @Override
+    public void setBooleanValue(@Nonnull String propertyName, boolean value) {
+        if (isDefaultState() && getProperties().isDefaultBooleanValue(propertyName, value)) {
+            return;
+        }
+        getMutableState().setBooleanValue(propertyName, value);
+    }
+
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    @Override
+    public void setIntValue(@Nonnull String propertyName, int value) {
+        if (isDefaultState() && getProperties().isDefaultIntValue(propertyName, value)) {
+            return;
+        }
+        getMutableState().setIntValue(propertyName, value);
+    }
+
+    @Nonnegative
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    @Override
+    @Deprecated
+    @DeprecationDetails(reason = "Does the same as getId() but the other is compatible with NukkitX and this is not", since = "1.4.0.0-PN")
+    public final int getBlockId() {
+        return getId();
+    }
+
+    @Nonnegative
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    @Nonnull
+    @Override
+    public final Number getDataStorage() {
+        return mutableState == null? 0 : mutableState.getDataStorage();
+    }
+
+    @Nonnegative
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    @Deprecated
+    @DeprecationDetails(reason = "Can't store all data, exists for backward compatibility reasons", since = "1.4.0.0-PN", replaceWith = "getDataStorage()")
+    @Override
+    public int getLegacyDamage() {
+        return mutableState == null? 0 : mutableState.getLegacyDamage();
+    }
+
+    @Unsigned
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    @Deprecated
+    @DeprecationDetails(reason = "Can't store all data, exists for backward compatibility reasons", since = "1.4.0.0-PN", replaceWith = "getDataStorage()")
+    @Override
+    public int getBigDamage() {
+        return mutableState == null? 0 : mutableState.getBigDamage();
+    }
+
+    @Nonnegative
+    @Since("1.4.0.0-PN")
+    @PowerNukkitOnly
+    @Deprecated
+    @DeprecationDetails(reason = "Can't store all data, exists for backward compatibility reasons", since = "1.4.0.0-PN", replaceWith = "getDataStorage()")
+    @Override
+    public int getSignedBigDamage() {
+        return mutableState == null? 0 : mutableState.getSignedBigDamage();
+    }
+
+    @Nonnegative
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    @Nonnull
+    @Override
+    public BigInteger getHugeDamage() {
+        return mutableState == null? BigInteger.ZERO : mutableState.getHugeDamage();
+    }
+
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    @Nonnull
+    @Override
+    public Serializable getPropertyValue(@Nonnull String propertyName) {
+        if (isDefaultState()) {
+            return getProperties().getBlockProperty(propertyName).getDefaultValue();
+        }
+        return getMutableState().getPropertyValue(propertyName);
+    }
+
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    @Override
+    public int getIntValue(@Nonnull String propertyName) {
+        if (isDefaultState()) {
+            return getProperties().getBlockProperty(propertyName).getDefaultIntValue();
+        }
+        return getMutableState().getIntValue(propertyName);
+    }
+
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    @Override
+    public boolean getBooleanValue(@Nonnull String propertyName) {
+        if (isDefaultState()) {
+            return getProperties().getBlockProperty(propertyName).getDefaultBooleanValue();
+        }
+        return getMutableState().getBooleanValue(propertyName);
+    }
+
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    @Nonnull
+    @Override
+    public String getPersistenceValue(@Nonnull String propertyName) {
+        if (isDefaultState()) {
+            return getProperties().getBlockProperty(propertyName).getPersistenceValueForMeta(0);
+        }
+        return getMutableState().getPersistenceValue(propertyName);
+    }
+
+    @Since("1.4.0.0-PN")
+    @PowerNukkitOnly
+    @Override
+    public final int getExactIntStorage() {
+        return mutableState == null? 0 : mutableState.getExactIntStorage();
+    }
+
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    public boolean isBreakable(@Nonnull Vector3 vector, int layer, @Nonnull BlockFace face, @Nonnull Item item, @Nullable Player player, boolean setBlockDestroy) {
+        return true;
+    }
+
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    public final boolean isBlockChangeAllowed() {
+        return getChunk().isBlockChangeAllowed(getFloorX() & 0xF, getFloorY(), getFloorZ() & 0xF);
+    }
+
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    public final boolean isBlockChangeAllowed(@Nullable Player player) {
+        if (isBlockChangeAllowed()) {
+            return true;
+        }
+        return player != null && player.isCreative() && player.isOp();
+    }
+    
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    public int getLightFilter() {
+        return isSolid() && !isTransparent()? 15 : 1;
+    }
+
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    public final boolean canRandomTick() {
+        return Level.canRandomTick(getId());
+    }
+
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    public boolean onProjectileHit(@Nonnull Entity projectile, @Nonnull Position position, @Nonnull Vector3 motion) {
+        return false;
+    }
+
+    @Nonnull
+    @Override
+    public final Block getBlock() {
+        return clone();
+    }
+
+    @Since("1.4.0.0-PN")
+    @PowerNukkitOnly
+    @Override
+    public boolean isDefaultState() {
+        return mutableState == null || mutableState.isDefaultState();
+    }
+
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    public int getItemMaxStackSize() {
+        return 64;
+    }
+
+    /**
+     * Check if a block is getting powered threw a block or directly.
+     * @return if the gets powered.
+     */
+    @PowerNukkitOnly
+    @Since("1.4.0.0-PN")
+    @PowerNukkitDifference(info = "Used so often, why not create own method here?", since = "1.4.0.0-PN")
+    public boolean isGettingPower() {
+        if (!this.level.getServer().isRedstoneEnabled()) return false;
+
+        for (BlockFace side : BlockFace.values()) {
+            Block b = this.getSide(side).getLevelBlock();
+
+            if (this.level.isSidePowered(b.getLocation(), side)) {
+                return true;
+            }
+        }
+        return this.level.isBlockPowered(this.getLocation());
     }
 }
